/*
  * index_metadata.proto
  *
  * This source file is part of the FoundationDB open source project
  *
  * Copyright 2015-2021 Apple Inc. and the FoundationDB project authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */

syntax = "proto2";

package com.apple.foundationdb.record;
option java_outer_classname = "IndexBuildProto";

// This stamp indicates an ongoing indexing process. It will be used to assure a coherent indexing
// continuation - which continued by another process.

message IndexBuildIndexingStamp {
  enum Method {
    INVALID      = 0;  // let zero be invalid
    BY_RECORDS   = 1;  // indexing by records - scanning all records in a record store
    BY_INDEX     = 2;  // indexing by a source index. When source index points to all possible records of the target index.
    SCRUB_REPAIR = 3;  // while readable, verify index validity. Repair if needed.
    MULTI_TARGET_BY_RECORDS = 4; // scan records, build multiple target indexes
  };
  optional Method method = 1;
  optional bytes source_index_subspace_key = 2; // relevant only with BY_INDEX method
  optional int32 source_index_last_modified_version = 3; // only with BY_INDEX method
  repeated string targetIndex = 4; //only with *_MULTI_TARGET: list of target indexes sorted alphabetically
                                   // the first item is used as the primary index
 }


